# aurora-analytics

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/news_ingest/: main.py
src/news_ingest/application/: ports.py  use_cases.py
src/news_ingest/domain/: models.py
src/news_ingest/infrastructure/: clock.py  console_writer.py  kinesis_writer.py  newsapi_client.py  settings.py
